--- a/app/app/views/projects/projects.erb
+++ b/app/app/views/projects/projects.erb
@@ -1,11 +1,7 @@
-<h1> Welcome, </h1>
-
-<% @projects.each do |p|%>
-  <%= p.name %>
+<%if Helpers.is_logged_in?(session)%>
+  <h2>These are your projects, <%= session[:username]%></h2>
 <%end%>
 
-<a href="/logout">Log Out</a>
-<ul>
-  <li><a href="/users/index">Your Profile</a></li>
-  <li><a href="/logout">Log Out</a></li>
-</ul>
+<% @user.projects.each do |p|%>
+  <%= p.project_name %><br>
+<%end%>
