--- a/app/app/views/projects/edit_projects.erb
+++ b/app/app/views/projects/edit_projects.erb
@@ -1,9 +1,12 @@
 <form action="/projects/:project_id/edit" method="POST">
   Project name: <%= session[:project_name] %><br>
   <%user_id = session[:id]%>
+  Description: <%= @project.description%><br>
 
-  Description:<input type="text" name="description" id="description"><br>
   Content: <input type="text" name="content" id="content"><br>
   <input type="submit" name="edit" id="edit" value="edit project"><br>
+</form>
+
+<form action="/projects/:project_id/delete" method="POST">
   <input type="submit" name="delete" id="delete" value="delete project">
 </form>
