--- a/app/views/projects/new.erb
+++ b/app/views/projects/new.erb
@@ -2,6 +2,8 @@
   Name:<input type="text" name="project_name" id="project_name"><br>
   Description:<input type="text" name="description" id="description"><br>
   Content: <input type="text" name="content" id="content"><br>
-  <%user_id = session[:id]%>
+
+  <input type="hidden" name="user_id" id="user_id" value= "1">
+  <input type="hidden" name = "contributors" id= "contributors" value= "Mars">
   <input type="submit" name="submit" id="submit">
 </form>
