--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -2,7 +2,8 @@
 
 <form action="/signup" method="POST">
   Username: <input type="text" name="username" id="username"><br>
-  Email: <input type="text" name="email" id="email"><br>
+  Email: <input type="email" name="email" id="email"><br>
   Password: <input type="text" name="password" id="password"><br>
+
   <input type="submit" name="submit" id="submit">
 </form>
