--- a/app/views/projects/edit_projects.erb
+++ b/app/views/projects/edit_projects.erb
@@ -9,3 +9,9 @@
 <form action="/projects/:project_name/delete" method="POST">
   <input type="submit" name="delete" id="delete" value="delete project">
 </form>
+
+<ul>
+  <li><a href="/users/index">Your Profile</a></li>
+  <li><a href="/projects/projects">Your Projects</a></li>
+  <li><a href="/logout">Log Out</a></li>
+</ul>
