--- a/app/views/projects/new.erb
+++ b/app/views/projects/new.erb
@@ -1,3 +1,10 @@
+<h3>
+  <% if flash.has?(:message) %>
+    <%= flash[:message] %>
+  <% end %>
+</h3>
+New Project:<br>
+
 <form action="/projects" method="POST">
   Name:<input type="text" name="project_name" id="project_name"><br>
   Description:<input type="text" name="description" id="description"><br>
