--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,9 +1,14 @@
 <h3>Sign up</h3>
 
+<h3>
+  <% if flash.has?(:message) %>
+    <%= flash[:message] %>
+  <% end %>
+</h3>
+
 <form action="/signup" method="POST">
   Username: <input type="text" name="username" id="username"><br>
   Email: <input type="email" name="email" id="email"><br>
   Password: <input type="text" name="password" id="password"><br>
-
   <input type="submit" name="submit" id="submit">
 </form>
