--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -1,12 +1,12 @@
 
 <h1>Project Name: <%= @project.project_name %><br></h1>
-<%session[:project_name] = @project.project_name%>
+
 <h3>Description: <%= @project.description %><br></h3>
 <h3>Content: <%= @project.content %></h3>
 <h3>contributors: <%= @project.contributors%>
 
 <ul>
-  <li><a href="/projects/:project_name/edit"> Edit Project<br>
+  <li><a href="/projects/:slug/edit"> Edit Project<br>
   <li><a href="/projects/projects">Your Projects</a></li>
   <li><a href="/logout">Log Out</a></li>
 </ul>
